# databasemini

./: .gitignore  CMakeLists.txt  README.md
apps/: mongo_main.cpp  mysql_main.cpp  neo4j_main.cpp  postgres_main.cpp  redis_main.cpp
docs/: architecture.md
examples/: mongo_demo.js  mysql_demo.sql  neo4j_demo.cypher  postgres_demo.sql  redis_demo.txt
include/minidb/common/: repl.hpp  result.hpp  sql_parser.hpp  types.hpp
include/minidb/mongo/: bson.hpp  mongo_database.hpp  mongo_parser.hpp
include/minidb/mysql/: mysql_database.hpp  storage_engine.hpp
include/minidb/neo4j/: cypher_parser.hpp  neo4j_database.hpp
include/minidb/postgres/: postgres_database.hpp
include/minidb/redis/: redis_database.hpp  redis_parser.hpp
src/common/: result.cpp  sql_parser.cpp
src/mongo/: bson.cpp  mongo_database.cpp  mongo_parser.cpp
src/mysql/: innodb_engine.cpp  memory_engine.cpp  mysql_database.cpp
src/neo4j/: cypher_parser.cpp  neo4j_database.cpp
src/postgres/: postgres_database.cpp
src/redis/: redis_database.cpp  redis_parser.cpp
tests/: minidb_tests.cpp
